--- a/Dashboard-quiz/index.html
+++ b/Dashboard-quiz/index.html
@@ -15,11 +15,11 @@
                 <div class="logo">
                     <h2>
                         <span class="logo-lg"><ion-icon name="chatbubbles"></ion-icon></span>Quiz <span
-                            class="application">Application</span>
+                            class="application">Applicationjjjgit</span>
                     </h2>
                 </div>
                 <div class="close" id="close-btn">
-                    <ion-icon name="close-sharp"></ion-icon>
+                    <ion-icon name="close-sharp"> </ion-icon>
                 </div>
             </div>
 
