--- a/Dashboard-quiz/index.html
+++ b/Dashboard-quiz/index.html
@@ -15,7 +15,7 @@
                 <div class="logo">
                     <h2>
                         <span class="logo-lg"><ion-icon name="chatbubbles"></ion-icon></span>Quiz <span
-                            class="application">Applicationjjjgit</span>
+                            class="application">Application</span>
                     </h2>
                 </div>
                 <div class="close" id="close-btn">
